tests/derive_ui/flatten_enum_in_struct.stderr
error[E0277]: the trait bound `SubCmd: clap::Args` is not satisfied
 --> tests/derive_ui/flatten_enum_in_struct.rs:4:10
  |
  4 |     sub: SubCmd,
    |          ^^^^^^ unsatisfied trait bound
    |
help: the trait `clap::Args` is not implemented for `SubCmd`
   --> tests/derive_ui/flatten_enum_in_struct.rs:8:1
    |
  8 | enum SubCmd {}
    | ^^^^^^^^^^^
help: the following other types implement trait `clap::Args`
   --> tests/derive_ui/flatten_enum_in_struct.rs:1:10
    |
  1 | #[derive(clap::Parser)]
    |          ^^^^^^^^^^^^ `Opt`
    |
   ::: clap_builder/src/derive.rs
    |
    | impl<T: Args> Args for Box<T> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Box<T>`
...
    | impl Args for () {
    | ^^^^^^^^^^^^^^^^ `()`
    = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)
